[package]
name = "twist-rs"
version = "0.1.0"
authors = ["PotHix <pothix@pothix.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
