[package]
name = "twist-rs"
version = "0.1.0"
authors = ["PotHix <pothix@pothix.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
mockito = "0.27.0"

[profile.release]
# optimizing for binary size here
# for more info: https://github.com/johnthagen/min-sized-rust
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
